--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.11.0
 asgiref==3.10.0
+attrs==25.4.0
 beautifulsoup4==4.14.2
 certifi==2025.11.12
 cffi==2.0.0
@@ -8,25 +12,41 @@ channels==4.3.1
 charset-normalizer==3.4.4
 colorama==0.4.6
 cryptography==46.0.3
+dataclasses-json==0.6.7
 distro==1.9.0
 Django==5.2.8
 djangorestframework==3.16.1
+faiss-cpu==1.12.0
+filelock==3.20.0
+frozenlist==1.8.0
+fsspec==2025.10.0
+greenlet==3.2.4
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
+httpx-sse==0.4.3
+huggingface-hub==0.36.0
 idna==3.11
 jiter==0.12.0
 jsonpatch==1.33
 jsonpointer==3.0.0
 langchain==1.0.5
+langchain-classic==1.0.0
+langchain-community==0.4.1
 langchain-core==1.0.4
+langchain-huggingface==1.0.1
 langchain-openai==1.0.2
+langchain-text-splitters==1.0.0
 langgraph==1.0.3
 langgraph-checkpoint==3.0.1
 langgraph-prebuilt==1.0.2
 langgraph-sdk==0.2.9
 langsmith==0.4.42
 lxml==6.0.2
+marshmallow==3.26.1
+multidict==6.7.0
+mypy_extensions==1.1.0
+numpy==2.3.4
 openai==2.7.2
 orjson==3.11.4
 ormsgpack==1.12.0
@@ -34,8 +54,10 @@ packaging==25.0
 pdfminer.six==20251107
 pdfplumber==0.11.8
 pillow==12.0.0
+propcache==0.4.1
 pycparser==2.23
 pydantic==2.12.4
+pydantic-settings==2.12.0
 pydantic_core==2.41.5
 pypdfium2==5.0.0
 python-docx==1.2.0
@@ -46,13 +68,17 @@ requests==2.32.5
 requests-toolbelt==1.0.0
 sniffio==1.3.1
 soupsieve==2.8
+SQLAlchemy==2.0.44
 sqlparse==0.5.3
 tenacity==9.1.2
 tiktoken==0.12.0
+tokenizers==0.22.1
 tqdm==4.67.1
+typing-inspect==0.9.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
 xxhash==3.6.0
+yarl==1.22.0
 zstandard==0.25.0
